log/build_2025-02-19_00-15-26/gs_package/stderr.log
  File "/home/tomasz/Desktop/sese_ws/install/gs_package/lib/python3.12/site-packages/gs_package/gs_batt_pub.py", line 33
    marker.text = f'Voltage: {self.curr_voltage:.2f} V\n 
                  ^
SyntaxError: unterminated f-string literal (detected at line 33)

